--- a/application/src/main/resources/application.yaml
+++ b/application/src/main/resources/application.yaml
@@ -2,6 +2,6 @@ ktor:
   wait: true
 
 mysql:
-  host: 'localhost'
-  user: 'root'
-  password: ''
+  host: ${MYSQL_HOST}
+  user: ${MYSQL_USER}
+  password: ${MYSQL_PASSWORD}
