prevent global job to die

--- a/application/src/main/resources/application.yaml
+++ b/application/src/main/resources/application.yaml
@@ -6,3 +6,6 @@ mysql:
   host: ${MYSQL_HOST}
   user: ${MYSQL_USER}
   password: ${MYSQL_PASSWORD}
+
+enqueue:
+  period: ${ENQUEUE_TASKS_PERIOD:10}
